--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css?v=2" rel="stylesheet">
     <title>Ali Channa - Portfolio</title>
 
     <link
