--- a/index.html
+++ b/index.html
@@ -79,7 +79,59 @@
         </div>
 
         <main class="projects">
-          <article class="project">
+          
+                        <!-- FEATURED AI PROJECT -->
+            <article class="project featured">
+            <img
+                src="images/ai-finance.png"
+                alt="AI Financial Health Analyzer"
+            />
+
+            <div class="project-content">
+                <h3>AI Financial Health Analyzer</h3>
+
+                <p>
+                A full-stack AI-powered web application that analyzes personal financial
+                data to generate risk metrics, cashflow insights, and actionable
+                recommendations. Built to combine computer science, finance, and modern
+                AI workflows.
+                </p>
+
+                <p>
+                Users input income, expenses, and debt details to receive real-time
+                financial scoring, while an AI agent provides a personalized coaching-style
+                summary using large language models.
+                </p>
+
+                <ul class="tech">
+                <li>Next.js</li>
+                <li>TypeScript</li>
+                <li>SQL (Neon)</li>
+                <li>OpenAI API</li>
+                <li>Vercel</li>
+                </ul>
+
+                <div class="project-links">
+                <a
+                    class="btn primary"
+                    href="https://YOUR-VERCEL-URL.vercel.app"
+                    target="_blank"
+                >
+                    Live Demo
+                </a>
+
+                <a
+                    class="btn"
+                    href="https://github.com/aliuchanna/AI-Financial-Health-Analyzer"
+                    target="_blank"
+                >
+                    GitHub Repo
+                </a>
+                </div>
+            </div>
+            </article>
+            
+            <article class="project">
             <div class="project-media">
               <img src="images/01-IMG_20141209_0001.jpg" alt="Building Scoring Program Project" />
             </div>
