--- a/index.html
+++ b/index.html
@@ -113,20 +113,19 @@
 
                 <div class="project-links">
                 <a
-                    class="btn primary"
-                    href="https://YOUR-VERCEL-URL.vercel.app"
-                    target="_blank"
-                >
-                    Live Demo
+                    class="actions">
+                <a  class="link-btn" href="https://aifinancesanalyzer.vercel.app/" target="_blank" rel="noopener noreferrer">
+                    See it Live
                 </a>
-
+                </a>
                 <a
-                    class="btn"
-                    href="https://github.com/aliuchanna/AI-Financial-Health-Analyzer"
-                    target="_blank"
-                >
+                    class="actions">
+                <a  class="link-btn" href="https://github.com/aliuchanna/AI-Financial-Health-Analyzer.git" target="_blank" rel="noopener noreferrer">
                     GitHub Repo
                 </a>
+                </a>
+
+                
                 </div>
             </div>
             </article>
